y.output
Grammar

    0 $accept: line $end

    1 line: statement

    2 statement: assignment

    3 assignment: expression
    4           | IDENTIFIER ASSIGN expression SEMICOLON

    5 expression: IDENTIFIER
    6           | expression OP expression
    7           | LBRACE expression RBRACE


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 4 5
ASSIGN (259) 4
LBRACE (260) 7
RBRACE (261) 7
SEMICOLON (262) 4
OP (263) 6


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
line (10)
    on left: 1, on right: 0
statement (11)
    on left: 2, on right: 1
assignment (12)
    on left: 3 4, on right: 2
expression (13)
    on left: 5 6 7, on right: 3 4 6 7


state 0

    0 $accept: . line $end

    IDENTIFIER  shift, and go to state 1
    LBRACE      shift, and go to state 2

    line        go to state 3
    statement   go to state 4
    assignment  go to state 5
    expression  go to state 6


state 1

    4 assignment: IDENTIFIER . ASSIGN expression SEMICOLON
    5 expression: IDENTIFIER .

    ASSIGN  shift, and go to state 7

    $default  reduce using rule 5 (expression)


state 2

    7 expression: LBRACE . expression RBRACE

    IDENTIFIER  shift, and go to state 8
    LBRACE      shift, and go to state 2

    expression  go to state 9


state 3

    0 $accept: line . $end

    $end  shift, and go to state 10


state 4

    1 line: statement .

    $default  reduce using rule 1 (line)


state 5

    2 statement: assignment .

    $default  reduce using rule 2 (statement)


state 6

    3 assignment: expression .
    6 expression: expression . OP expression

    OP  shift, and go to state 11

    $default  reduce using rule 3 (assignment)


state 7

    4 assignment: IDENTIFIER ASSIGN . expression SEMICOLON

    IDENTIFIER  shift, and go to state 8
    LBRACE      shift, and go to state 2

    expression  go to state 12


state 8

    5 expression: IDENTIFIER .

    $default  reduce using rule 5 (expression)


state 9

    6 expression: expression . OP expression
    7           | LBRACE expression . RBRACE

    RBRACE  shift, and go to state 13
    OP      shift, and go to state 11


state 10

    0 $accept: line $end .

    $default  accept


state 11

    6 expression: expression OP . expression

    IDENTIFIER  shift, and go to state 8
    LBRACE      shift, and go to state 2

    expression  go to state 14


state 12

    4 assignment: IDENTIFIER ASSIGN expression . SEMICOLON
    6 expression: expression . OP expression

    SEMICOLON  shift, and go to state 15
    OP         shift, and go to state 11


state 13

    7 expression: LBRACE expression RBRACE .

    $default  reduce using rule 7 (expression)


state 14

    6 expression: expression . OP expression
    6           | expression OP expression .

    $default  reduce using rule 6 (expression)


state 15

    4 assignment: IDENTIFIER ASSIGN expression SEMICOLON .

    $default  reduce using rule 4 (assignment)
